# TrendRadar

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AI_CONFIG_SETUP_GUIDE.md  BARK_COMPATIBILITY_REPORT.md  BARK_TROUBLESHOOTING.md  CLAUDE.md  CNAME  DEPLOY_VPS.md  DINGTALK_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  README-Cherry-Studio.md  README-EN.md  README-FR.md  README-JA.md  README-MCP-FAQ.md  README.md  TODO.md  TrendRadar-RSS-support.md  VPS_QUICKSTART.md  ai_analyzer.py  config.yaml  debug_bark.py  deploy-vps.sh  frequency_words.txt  generate_index_html_with_podcast.py  go.mod  go.sum  index-templte.html  index.html  main.py  main_vi.py  mongo_uploader.py  pyproject.toml  readme.md  requirements.txt  (+9 more)
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-config-help.yml
.github/workflows/: clean-crawler.yml  crawler-gcs.yml  crawler.yml  docker.yml  ghcr.yml  jekyll-gh-pages.yml  main.yml  mcp-http-compat.yml  mm-crawler.yml.Backup  run.yml  sync.yml  test-email.yml  trendradar.yml  verify_all.yml
Next-web/: Dockerfile  README.md  docker-compose.yml  requirements.txt
Next-web/app/: main.py
Next-web/app/core/: config.py  database.py
Next-web/app/models/: __init__.py  news.py  user.py
Next-web/app/services/: __init__.py  cleanup_service.py  sync_service.py
Next-web/app/ui/: admin.py  auth.py  dashboard.py  news.py
TrendRader_go/: Dockerfile  docker-entrypoint.sh  go.mod
TrendRader_go/cmd/mcpserver/: main.go
TrendRader_go/cmd/trendradar/: main.go
TrendRader_go/pkg/analysis/: analysis.go  analysis_test.go  types.go
TrendRader_go/pkg/app/: env.go
TrendRader_go/pkg/config/: types.go
TrendRader_go/pkg/crawler/: fetcher.go  fetcher_test.go
TrendRader_go/pkg/mcp/: server.go
cmd/mcpserver/: main.go
cmd/trendradar/: main.go
config/: ai_analysis_prompt.txt  ai_config.yaml  ai_interests.txt  ai_prompt.txt  ai_prompt_template.yaml  ai_prompts.yaml  config.yaml  config.yaml.example  config1.yaml  custom_dict.txt  dedupe_prompt.txt  frequency_words.txt  frequency_words.txt.bak  frequency_words1.txt  mm-config.yaml  mm-frequency_words.txt  timeline.yaml  wework_compact_prompt.txt
config/extensions/: html_ai_analysis.yaml  notification_scheduler.yaml  report_dedupe.yaml  wework_compact.yaml
config_auto/: frequency_words.txt
config_auto/config_auto/: config.yaml
docker/: .env  Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose-go.yml  docker-compose.yml  entrypoint.sh  install_supercronic.sh  manage.py  requirements.txt
docs/: 00-complete-manual.md  01-overview.md  02-architecture.md  03-configuration.md  04-development.md  05-api-reference.md  06-deployment.md  07-user-manual.md  08-docker-deployment-guide.md  09-self-hosted-ai-model-guide.md  10-ai-analysis-workflow.md  10-keyword-configuration-guide.md  11-ai-integration-guide.md  12-deployment-troubleshooting-guide.md  13-mcp-function-analysis.md  CHANGELOG.md  README-EN.md  README-EXTENSIONS.md  README.md  SYNOLOGY-NAS-DEPLOYMENT.md  TrendRadar-Complete-Manual.md  index.html  openclaw-integration.md
docs/assets/: script.js  style.css
docs/changelog/: 5.0.1.md  5.0.2.md  5.0.3.md  5.0.4.md  5.0.5.md  5.0.6.md  5.0.7.md
docs/extensions/: html-ai-analysis.md  report-dedupe.md
extensions/: __init__.py  base.py
extensions/html_ai_analysis/: __init__.py
extensions/notification_scheduler/: __init__.py
extensions/report_dedupe/: __init__.py  ollama_client.py  report_dedupe.py
extensions/wework_compact/: __init__.py
mcp_server/: __init__.py  server_en.py
mcp_server/services/: __init__.py  data_service.py
mcp_server/tools/: __init__.py  data_query.py  storage_sync.py  system.py
mcp_server/utils/: errors.py  validators.py
output/: index.html
output/.push_records/: push_record_20250912.json  push_record_20250913.json  push_record_20250914.json  push_record_20250915.json  push_record_20250916.json  push_record_20250917.json  push_record_20250918.json  push_record_20250919.json  push_record_20250920.json  push_record_20250921.json  push_record_20250922.json  push_record_20250923.json  push_record_20251013.json  push_record_20251014.json  push_record_20251015.json  push_record_20251016.json  push_record_20251017.json  push_record_20251018.json  push_record_20251019.json  push_record_20251020.json  push_record_20251021.json  push_record_20251022.json  push_record_20251023.json  push_record_20251024.json  push_record_20251025.json  push_record_20251026.json  push_record_20251027.json  push_record_20251028.json  push_record_20251029.json  push_record_20251030.json  push_record_20251031.json  push_record_20251101.json  push_record_20251102.json  push_record_20251103.json  push_record_20251104.json  push_record_20251105.json  push_record_20251106.json  push_record_20251107.json  push_record_20251108.json  push_record_20251109.json  (+24 more)
output/news/: 2026-01-21.db
output/rss/: 2026-01-21.db
pkg/analysis/: analysis.go  analysis_test.go  types.go
pkg/app/: env.go
pkg/config/: load.go  load_test.go
pkg/crawler/: fetcher.go  fetcher_test.go
pkg/keywords/: list.go  list_test.go
pkg/mcptools/: analysis_adv.go  config_tool.go  helpers.go  latest_news.go  news_by_date.go  search.go  system.go  trending_topics.go
pkg/parser/: parser.go  parser_test.go
pkg/storage/: output.go  output_test.go
rss_module/: rss_feed.py
scripts/: migrate_to_rolling_window.py  send_test_email.py
tests/: test_ai_incremental_report_data.py  test_dedupe_prompt.py  test_normalize_platform_sources.py  test_time_utils.py  test_validate_days.py
tools/: openclaw_runner.py
trendradar/: __init__.py  __main__.py  context.py
trendradar/ai/: client.py  filter.py  formatter.py
trendradar/core/: analyzer.py  data.py  frequency.py  loader.py  scheduler.py
trendradar/notification/: batch.py  dispatcher.py  renderer.py  senders.py  splitter.py
trendradar/report/: formatter.py  helpers.py  html.py
trendradar/storage/: base.py  manager.py  rss_schema.sql  schema.sql
trendradar/utils/: time.py
(+58934 files in other folders)
