[project]
name = "trendradar"
version = "5.0.0"
description = "TrendRadar - 热点新闻聚合与分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "fastmcp>=2.12.0,<2.14.0",
    "websockets>=13.0,<14.0",
    "feedparser>=6.0.0,<7.0.0",
    "boto3>=1.35.0,<2.0.0",
]

[project.scripts]
trendradar = "trendradar.__main__:main"
trendradar-mcp = "mcp_server.server:run_server"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trendradar", "mcp_server"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
pyclean = ">=3.4.0,<4"

[tool.pixi.activation.env]
# Default environment variables when pixi environment is activated
# These can be overridden when running specific tasks or manually
CRAWLER_INTERVAL = "1800"  # Crawler loop interval in seconds (default: 30 minutes)
RUN_MODE = "loop"          # Default run mode for crawler-server task

[tool.pixi.pypi-dependencies]
trendradar = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
# Build Docker image for Synology NAS (amd64 architecture) and save as tar
build-nas = "cd docker && docker buildx build --platform linux/amd64 --load -t docker-trendradar:latest -f Dockerfile .. && docker buildx build --platform linux/amd64 --load -t docker-trendradar-mcp:latest -f Dockerfile.mcp .. && docker save docker-trendradar:latest docker-trendradar-mcp:latest -o ../trendradar-nas.tar"

# Run crawler once (single run, generates HTML report)
crawler = "python -m trendradar"

# Run crawler as scheduled service (continuous loop, default interval: 1 hour)
# Use RUN_MODE=loop for continuous execution, CRAWLER_INTERVAL to customize (in seconds)
crawler-server = "RUN_MODE=loop python -m trendradar"

# Run TrendRadar MCP server (continuous service)
mcp = "python -c 'from mcp_server.server import run_server; run_server()'"


